# Mog

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  example.data  example.txt  renderer  window.c
src/: Scene.c  Scene.h  main.c
src/app/: Scenes.h  cube.c  image.c
src/platform/X11/: window.c  window.h
src/renderer/: camera.c  framebuffer-functions.c  matrix-functions.c  model-transform.c  model.c  projection.c  rasterizer.c  renderer.h
